Set executor heap memory to 2G